adding the new descriptions and the new exec for the 2020-2021 year

--- a/pages/executives.html
+++ b/pages/executives.html
@@ -12,70 +12,78 @@
             <tr class="ada-row">
                 <td class="ada-paragraph">
                   <p class="ada-paragraph bold">President:</p> <br/>
-                  <p class="ada-paragraph">Responsible for managing the general executive and planning meetings</p>
-                </td>
-                <td class="ada-paragraph bottom-table">Chelsea Hong</td>
-            </tr>
-            <tr class="ada-row">
-                <td class="ada-paragraph">
-                  <p class="ada-paragraph bold">VP Admin: </p> <br/>
-                  <p class="ada-paragraph">Responsible for tutoring and room sitting hours as well as member attendance</p>
-                </td>
-                <td class="ada-paragraph bottom-table">Lidia Ataupillco Ramos</td>
-            </tr>
-            <tr class="ada-row">
-                <td class="ada-paragraph">
-                  <p class="ada-paragraph bold">VP Finance:</p> <br/>
-                  <p class="ada-paragraph">Responsible for any finances that are not related to conference</p>
-                </td>
-                <td class="ada-paragraph bottom-table">Aysha Araien</td>
-            </tr>
-            <tr class="ada-row">
-                <td class="ada-paragraph">
-                  <p class="ada-paragraph bold">VP Events:</p> <br/>
-                  <p class="ada-paragraph">Responsible for planning Autumn Feast, Clubs Fair and Coffee && Code events as well as bearsden submissions</p>
-                </td>
-                <td class="ada-paragraph bottom-table">Vacant</td>
-            </tr>
-            <tr class="ada-row">
-                <td class="ada-paragraph">
-                  <p class="ada-paragraph bold">VP Promotions:</p> <br/>
-                  <p class="ada-paragraph">Responsible for our social media, posters and this beautiful website</p>
-                </td>
-                <td class="ada-paragraph bottom-table">JuSong Baek</td>
-            </tr>
-            <tr class="ada-row">
-                <td class="ada-paragraph">
-                  <p class="ada-paragraph bold">VP Outreach External:</p> <br/>
-                  <p class="ada-paragraph">Responsible for working with WISEST to do a variety of kids outreach and network with other companies</p>
-                </td>
-                <td class="ada-paragraph bottom-table">Eisha Ahmed</td>
-            </tr>
-            <tr class="ada-row">
-                <td class="ada-paragraph">
-                  <p class="ada-paragraph bold">VP Outreach Internal:</p> <br/>
-                  <p class="ada-paragraph">Responsible for planning events with other students groups and organizing a diversity panel</p>
-                </td>
-                <td class="ada-paragraph bottom-table">Rex Xiang</td>
-            </tr>
-            <tr class="ada-row">
-                <td class="ada-paragraph">
-                  <p class="ada-paragraph bold">VP Conference External:</p> <br/>
-                  <p class="ada-paragraph">Responsible for planning flight and hotel in relation to conferences we go to</p>
+                  <p class="ada-paragraph">Responsible for managing the general executive, set a strategic direction for Ada's, creating meeting agendas, and more.</p>
                 </td>
                 <td class="ada-paragraph bottom-table">Helen Gezahegn</td>
             </tr>
             <tr class="ada-row">
                 <td class="ada-paragraph">
-                  <p class="ada-paragraph bold">VP Conference Internal:</p> <br/>
-                  <p class="ada-paragraph">Responsible for planning speeches and research posters at the conference we go to and preparing conference goers that we send</p>
+                  <p class="ada-paragraph bold">VP Administration:</p> <br/>
+                  <p class="ada-paragraph">Responsible for organizing and planning meetings, recording meeting minutes, and maintaining internal communications within the Executive Committee.</p>
                 </td>
-                <td class="ada-paragraph bottom-table">Katherine Mae Patenio</td>
+                <td class="ada-paragraph bottom-table">Katherine Patenio</td>
             </tr>
             <tr class="ada-row">
                 <td class="ada-paragraph">
-                  <p class="ada-paragraph bold">VP Conference Finance:</p> <br/>
-                  <p class="ada-paragraph">Responsible for making a budget for the conference and allocating money to attendees</p>
+                  <p class="ada-paragraph bold">VP Academic:</p> <br/>
+                  <p class="ada-paragraph">Responsible for scheduling Ada’s Base office hours and tutoring services, collecting information regarding student struggles, and advocating for changes on behalf of students to the department.</p>
+                </td>
+                <td class="ada-paragraph bottom-table">Amress Almonte</td>
+            </tr>
+            <tr class="ada-row">
+                <td class="ada-paragraph">
+                  <p class="ada-paragraph bold">VP Finance:</p> <br/>
+                  <p class="ada-paragraph">Responsible for reimbursememts, setting a budget, tracking all incoming and outgoing cash flow, and applying for grants used by the student group for operations.</p>
+                </td>
+                <td class="ada-paragraph bottom-table">Amanda Nguyen</td>
+            </tr>
+            <tr class="ada-row">
+                <td class="ada-paragraph">
+                  <p class="ada-paragraph bold">VP Digital Media:</p> <br/>
+                  <p class="ada-paragraph">Responsible for maintaining the website, blog, social media, and Ada’s Base whiteboard/bulletin board. They would also collaborate with VP Communications in making posters and advertising for events.</p>
+                </td>
+                <td class="ada-paragraph bottom-table">JuSong Baek</td>
+            </tr>
+            <tr class="ada-row">
+                <td class="ada-paragraph">
+                  <p class="ada-paragraph bold">VP Communications:</p> <br/>
+                  <p class="ada-paragraph">Responsible for tracking membership, sending out and crafting weekly/monthly emails, collaborating with VP Digital Media in making posters and advertising for events, and replying to emails.</p>
+                </td>
+                <td class="ada-paragraph bottom-table">Celina Sheng</td>
+            </tr>
+            <tr class="ada-row">
+                <td class="ada-paragraph">
+                  <p class="ada-paragraph bold">VP Campus Outreach</p> <br/>
+                  <p class="ada-paragraph">Responsible for acting as a liaison between Ada's Team and other student groups on campus with similar goals or missions. Including but not limited to: Student Group Services, BearsDen, and WISEST.</p>
+                </td>
+                <td class="ada-paragraph bottom-table">Riona Wiberg</td>
+            </tr>
+            <tr class="ada-row">
+                <td class="ada-paragraph">
+                  <p class="ada-paragraph bold">VP Industry Outreach</p> <br/>
+                  <p class="ada-paragraph">Responsible for liaising with companies and industry partners to organize events at the University of Alberta and helping with organizing events on campus to enrich members’ university experiences.</p>
+                </td>
+                <td class="ada-paragraph bottom-table">Dorsa Nahid</td>
+            </tr>
+
+            <tr class="ada-row">
+                <td class="ada-paragraph">
+                  <p class="ada-paragraph bold">VP Conference - Operations:</p> <br/>
+                  <p class="ada-paragraph">They would be responsible for booking accommodations at conferences in foreign cities, coordinating flights to and from the event, and handling other logistics in the conference city.</p>
+                </td>
+                <td class="ada-paragraph bottom-table">Chelsea Hong</td>
+            </tr>
+            <tr class="ada-row">
+                <td class="ada-paragraph">
+                  <p class="ada-paragraph bold">VP Conference - Relations:</p> <br/>
+                  <p class="ada-paragraph">Responsible for determining what the Department would like to see from Ada's Team during conferences, bringing any promotional materials to the conference, and hosting events at the conference.</p>
+                </td>
+                <td class="ada-paragraph bottom-table">Monica Bui</td>
+            </tr>
+            <tr class="ada-row">
+                <td class="ada-paragraph">
+                  <p class="ada-paragraph bold">VP Conference - Finance:</p> <br/>
+                  <p class="ada-paragraph">Responsible for applying for grants, talking to professors regarding fundraising for conferences, and handling reimbursements for students attending conferences.</p>
                 </td>
                 <td class="ada-paragraph bottom-table">Amy Xiang</td>
             </tr>
