feat: update website font to Questrial

--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
     <!-- Custom styles for this template -->
     <link href="css/simple-sidebar.css" rel="stylesheet">
 
+    <!-- Questrial Google Foot  -->
+    <link href="https://fonts.googleapis.com/css2?family=Questrial&display=swap" rel="stylesheet">
+
 </head>
 
 <body class="ada-background">
