feat: update to white github icon

--- a/pages/footer.html
+++ b/pages/footer.html
@@ -1,7 +1,7 @@
 <div style="margin:auto;">
 <div class="ada-link-wrapper right">
     <a href="https://github.com/adas-team" class="ada-link-wrapper">
-        <img src="img/github.svg" class="ada-link">
+        <img src="img/github.png" class="ada-link">
     </a>
 </div>
 <div class="ada-link-wrapper right">
