--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
     <!-- Questrial Google Foot  -->
     <link href="https://fonts.googleapis.com/css2?family=Questrial&display=swap" rel="stylesheet">
 
+    <meta name="google-site-verification" content="InBcItm50UzRzQDsZf4V4iI3X1y_Ewzb1ulC6nmIfdo" />
 </head>
 
 <body class="ada-background">
