--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Questrial&display=swap" rel="stylesheet">
 
     <meta name="google-site-verification" content="InBcItm50UzRzQDsZf4V4iI3X1y_Ewzb1ulC6nmIfdo" />
+    <meta name="robots" content="noindex">
 </head>
 
 <body class="ada-background">
